--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,46 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+@font-face {
+    font-family: 'Arial Rounded MT Bold';
+    font-weight: 600;
+    font-style: normal;
+    src: url('../assets/fonts/arlrdbd.ttf');
+}
+
+.side-menu{
+    background-color: #2ecc71;
+}
+
+.side-menu button{
+    color: #27AE60;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    height: 60px;
+    background-color: #fff;
+    font-family: "Arial Rounded MT Bold";
+    border-bottom: .5px solid #27AE60;
+}
+
+.side-menu .item-inner{
+    border: none !important;
+}
+
+.side-menu-header .toolbar-background{
+    background-color: #27AE60;
+}
+
+.side-menu-header .toolbar{
+    height: 60px;
+}
+
+.side-menu-header .img{
+    width: 42.75px;
+    height: 38.25px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
