--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,23 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content" class="side-menu-header">
+    <ion-header>
+      <ion-toolbar>
+        <img  class="img" src="../../assets/imgs/pyramide.png" />
+        <!--<ion-title>Menu</ion-title>-->
+      </ion-toolbar>
+    </ion-header>
+  
+    <ion-content class="side-menu">
+      <ion-list>
+        <button menuClose icon-start ion-item *ngFor="let p of pages" (click)="openPage(p)">
+          <ion-icon name="{{p.icon}}"></ion-icon>
+          {{p.title}}
+        </button>
+      </ion-list>
+    </ion-content>
+  
+  </ion-menu>
+  
+  
+  
+  <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
+  <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
