--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,5 @@
     page-login {
-        background-color: #2ecc71;
+        
         .btn {
             background-color: #2ecc71 !important;
         }
@@ -19,6 +19,6 @@
             color: white;
         }
         .form{
-            background-color: #2ecc71;
+            background-color: #27AE60;
         }
     }
