--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content" class="side-menu-header">
+<ion-menu [content]="content" class="side-menu-header no-scroll">
     <ion-header>
       <ion-toolbar>
         <img  class="img" src="../../assets/imgs/pyramide.png" />
