Correction page Login

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,13 @@
     page-login {
         
         .btn {
+            margin-top: 10%;
             background-color: #2ecc71 !important;
+            border-radius: 8px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            
         }
         .logo{
             display: block;
@@ -11,14 +17,19 @@
         .mdpforgot{
             font-size:9px;
             color: white;
+            margin-top: 5%;
         }
         .inscription{
             font-size:10px;
             margin-left: 80%;
             display: block;
             color: white;
+            margin-top: 5%;
         }
         .form{
             background-color: #27AE60;
+        }
+        .titlelab{
+            color:white !important;
         }
     }
