Correction style Login

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -32,4 +32,7 @@
         .titlelab{
             color:white !important;
         }
+        .input{
+            color:#ecf0f1 !important;
+        }
     }
