Correction Style Register et ForgotPsswd

--- a/src/pages/forgotpswd/forgotpswd.scss
+++ b/src/pages/forgotpswd/forgotpswd.scss
@@ -1,3 +1,21 @@
 page-forgotpswd {
+    .btn {
+        margin-top: 10%;
+        margin-bottom: 10%;
+        background-color: #2ecc71 !important;
+        border-radius: 8px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .input{
+        color:#ecf0f1 !important;
+    }
 
+    .form{
+        background-color: #27AE60;
+    }
+    .titlelab{
+        color:white !important;
+    }
 }
