--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,6 +1,22 @@
 page-register {
     .btn {
-        background-color: darkblue !important;
+        margin-top: 10%;
+        margin-bottom: 10%;
+        background-color: #2ecc71 !important;
+        border-radius: 8px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
+    .input{
+        color:#ecf0f1 !important;
+    }
+
+    .form{
+        background-color: #27AE60;
+    }
+    .titlelab{
+        color:white !important;
+    }
 }
