--- a/src/pages/profil/profil.scss
+++ b/src/pages/profil/profil.scss
@@ -19,7 +19,16 @@ page-profil {
     }
 
     .mainDivProfil{
-        background-color: #27AE60;
+        background-color: #3bdb7e;
         $base-padding: 16px;
+    }
+    .btn {
+        margin-top: 10%;
+        background-color: #27AE60 !important;
+        border-radius: 8px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
     }
 }
